[gd_scene load_steps=5 format=3 uid="uid://cq06iprx87piv"]

[ext_resource type="Texture2D" uid="uid://cf2nncoqjuc3k" path="res://resources/characters/slypth_dragingfly.png" id="1_edpjn"]
[ext_resource type="Theme" uid="uid://du8l63a56uknv" path="res://resources/themes/EventPanel.tres" id="2_dipdv"]
[ext_resource type="Script" path="res://scripts/draging_fly.gd" id="2_rilpd"]
[ext_resource type="Texture2D" uid="uid://yam1fjl0jbao" path="res://resources/items/pointerDragingFly.png" id="3_ylqtq"]

[node name="DragingFlyEvent" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.987)
script = ExtResource("2_rilpd")

[node name="EventPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -314.0
offset_top = -160.0
offset_right = 315.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_dipdv")

[node name="MainEvent" type="Label" parent="EventPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -293.5
offset_top = -59.388
offset_right = 293.5
offset_bottom = 28.612
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_dipdv")
text = "Slyph the Draging-fly
\"You don't know where he came from, but you sense a good and bad.
He promises luck to you, or misfortune. You feel a sense of disertanty.\"
Take the chances?
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Yes" type="Label" parent="EventPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 144.0
offset_top = -27.9392
offset_right = 247.0
offset_bottom = 3.06079
grow_vertical = 0
theme = ExtResource("2_dipdv")
text = "Yes"
horizontal_alignment = 1

[node name="No" type="Label" parent="EventPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 398.0
offset_top = -30.9787
offset_right = 501.0
offset_bottom = 0.0212708
grow_vertical = 0
theme = ExtResource("2_dipdv")
text = "No"
horizontal_alignment = 1

[node name="PointerDragingFly" type="Sprite2D" parent="EventPanel"]
position = Vector2(157, 137)
texture = ExtResource("3_ylqtq")

[node name="SlypthDragingFly" type="Sprite2D" parent="."]
position = Vector2(-36, 52.6849)
rotation = 0.698132
scale = Vector2(0.419866, 0.437041)
texture = ExtResource("1_edpjn")

[node name="EventTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="SelectionChoice" type="Timer" parent="."]

[node name="TextTimer" type="Timer" parent="."]

[connection signal="timeout" from="EventTimer" to="." method="_on_event_timer_timeout"]
[connection signal="timeout" from="SelectionChoice" to="." method="_on_selection_choice_timeout"]
[connection signal="timeout" from="TextTimer" to="." method="_on_text_timer_timeout"]
